[tool.poetry]
name = "pysats"
version = "0.0.1"
description = "GNU Affero General Public License v3"
authors = ["Fabio Isler <islerfab@gmail.com>"]
readme = "README.md"
license = "GNU Affero General Public License v3"
homepage = "https://github.com/marketdesignresearch/pysats"
repository = "https://github.com/marketdesignresearch/pysats"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"
Cython = "^0.29.23"
pyjnius = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
