[tool.poetry]
name = "pysats"
version = "0.2.2"
description = "GNU Affero General Public License v3"
authors = ["Fabio Isler <islerfab@gmail.com>"]
readme = "README.md"
license = "GNU Affero General Public License v3"
homepage = "https://github.com/marketdesignresearch/pysats"
repository = "https://github.com/marketdesignresearch/pysats"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
Cython = "^0.29.23"
pyjnius = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
